--- a/assets/css/aboutme.css
+++ b/assets/css/aboutme.css
@@ -27,13 +27,13 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-image: ("random.gif");
 }
 
 body {
   display: -ms-flexbox;
   display: flex;
-  color: #fff;
+  color:#fff;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
