--- a/assets/css/aboutme.css
+++ b/assets/css/aboutme.css
@@ -13,7 +13,7 @@ a:hover {
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: #333;
+  color:red;
   text-shadow: none; /* Prevent inheritance from `body` */
   background-color:yellow;
   border: 5px solid #fff;
@@ -33,9 +33,9 @@ body {
 body {
   display: -ms-flexbox;
   display: flex;
-  color:#fff;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  color:black; text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+ 
 }
 
 .cover-container {
